--- a/package.json
+++ b/package.json
@@ -17,27 +17,26 @@
   },
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.15.0",
+    "body-parser": "^1.18.3",
     "cors": "2.7.1",
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
-    "express": "4.13.4",
-    "express-jwt": "3.3.0",
-    "express-session": "1.13.0",
-    "jsonwebtoken": "7.1.9",
-    "method-override": "2.3.5",
+    "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.3.0",
+    "method-override": "^3.0.0",
     "methods": "1.1.2",
-    "mongoose": "4.4.10",
-    "mongoose-unique-validator": "1.0.2",
-    "morgan": "1.7.0",
+    "mongoose": "5.1.4",
+    "morgan": "^1.9.1",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
-    "request": "2.69.0",
+    "request": "^2.88.0",
     "slug": "0.9.1",
     "underscore": "1.8.3"
   },
   "devDependencies": {
-    "newman": "^3.8.2",
+    "newman": "^4.1.0",
     "nodemon": "^1.11.0"
   }
 }
